Mon May 10 23:04:25 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.h: Add prototype for _gtk_widget_grab_notify()

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkwindow.c (get_screen_icon_info): 
	Make static.

	* gdk/gdkdisplay.c (singlehead_...): 
	* gdk/x11/gdkkeys-x11.c (get_effective_keymap): 
	* gdk/x11/gdkgeometry-x11.c (expose_serial_predicate): 
	* gdk/x11/gdkdisplay-x11.c (escape_for_xmessage): Make static.

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from HEAD:
	
	* gtk/gtkcombobox.c (gtk_combo_box_menu_position_below): 
	Place the window above the combobox, if there is not enough
	room below.

	* tests/testentrycompletion.c: Make the second example use the 
	::match-selected signal to make it actually work.

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from HEAD:
	
	* gtk/gtkcombobox.c (gtk_combo_box_popup) 
	(gtk_combo_box_menu_button_press): Make sure the menu pops up
	as wide as the combobox.  (#59660, Havoc Pennington)

2004-05-10  Matthias Clasen  <mclasen@redhat.com>

	Merge from HEAD:
	
	* gtk/gtkfontsel.c (list_row_activated): Make Return activate the
	default button.  (#118921)

Mon May 10 15:03:50 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkwidget.c (_gtk_widget_grab_notify): New internal function
	that emits the grab notify signal.
	
	* gtk/gtkmain.c (gtk_grab_notify_foreach): Use it here.

Mon May 10 00:51:18 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from HEAD:
	
	* gtk/gtkmenu.c: Make destruction of a torn off menu work 
	like un-tearing off.

Sun May  9 21:05:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_add_action_with_accel): 
	Allow to suppress the stock accelerator by using "".  (#142196,
	David A Knight)
	
2004-05-08  Hans Breuer  <hans@breuer.org>

	Merge from HEAD:

	* gtk/gtkfilesystemwin32.c (extract_icon) : finally also
	create the correct mask for 'pseudo mime' icons
