@@ -34,6 +34,7 @@
 #include "gtkmenu.h"
 #include "gtktogglebutton.h"
 #include "gtktreeselection.h"
+#include "gtktreeprivate.h"
 #include "gtkvseparator.h"
 #include "gtkwindow.h"
 
@@ -2166,9 +2167,11 @@ gtk_combo_box_list_setup (GtkComboBox *combo_box)
 
   combo_box->priv->tree_view = gtk_tree_view_new ();
   sel = gtk_tree_view_get_selection (GTK_TREE_VIEW (combo_box->priv->tree_view));
-  gtk_tree_selection_set_mode (sel, GTK_SELECTION_SINGLE);
+  gtk_tree_selection_set_mode (sel, GTK_SELECTION_BROWSE);
   gtk_tree_view_set_headers_visible (GTK_TREE_VIEW (combo_box->priv->tree_view),
                                      FALSE);
+  _gtk_tree_view_set_hover_selection (GTK_TREE_VIEW (combo_box->priv->tree_view),
+				      TRUE);
   if (combo_box->priv->model)
     gtk_tree_view_set_model (GTK_TREE_VIEW (combo_box->priv->tree_view),
 			     combo_box->priv->model);
