@@ -208,6 +208,8 @@ struct _GtkTreeViewPrivate
   /* interactive search */
   guint enable_search : 1;
   guint disable_popdown : 1;
+  
+  guint hover_selection : 1;
 
   gint selected_iter;
   gint search_column;
@@ -317,6 +319,8 @@ void         _gtk_tree_view_queue_draw_node           (GtkTreeView       *tree_v
 						       GtkRBTree         *tree,
 						       GtkRBNode         *node,
 						       GdkRectangle      *clip_rect);
+void         _gtk_tree_view_set_hover_selection       (GtkTreeView       *tree_view,
+						       gboolean           hover);
 
 void _gtk_tree_view_column_realize_button   (GtkTreeViewColumn *column);
 void _gtk_tree_view_column_unrealize_button (GtkTreeViewColumn *column);
@@ -376,6 +380,7 @@ void              _gtk_tree_view_column_get_neighbor_sizes (GtkTreeViewColumn *c
 							    GtkCellRenderer   *cell,
 							    gint              *left,
 							    gint              *right);
+
 
 
 #ifdef __cplusplus
